# psych-agent-llm

./: .gitattributes  Behavioral_only.ipynb  Demographic_and_behavioral.ipynb  Demographic_behavioral_psychologica.ipynb  Demographic_only.ipynb  Demoraphic_and_psychological.ipynb  Fairness_Plots.ipynb  Individual_LLama3_FIPI.ipynb  README.md  analysis_df_word_cnt.csv  bert_sim_results_gpt4o.csv  calculate_rouge.ipynb  calculate_similarities.py  clustering.py  configures.py  experiment_results.csv  experiment_results_4o.csv  experiment_results_Llama200.csv  json_files_generation.py  plotsByDems(gpt).ipynb  plotsByDems(gpt4).ipynb  plotsByDems(gpt4o) copy.ipynb  plotsByDems(gpt4o)_MiniLM-L6-v2.ipynb  plotsByDems(gpt4o)_mpnet-base-v2.ipynb  plotsByDems.ipynb  pyproject.toml  requirements.txt  runSimCalc.script  similarity_calculations_LLama_150.csv  similarity_calculations_all.ipynb  similarity_of_bert.csv  similarity_results.csv  summary_results.csv  task tree.md  utils.py
.history/: README_20250530173251.md  README_20250530180739.md
Data/: Data_ReadMe.txt  Data_Rearrange.txt  LIWC.txt
codes/: pyproject.toml  runSimCalc.script
json_datasets/: conditioning_on_all.jsonl  holdout_Text_Anxiety.jsonl  holdout_Text_Numeracy.jsonl  holdout_Text_SubjectiveLit.jsonl  holdout_Text_TrustPhys.jsonl  labels.csv  no_system_prompt.jsonl
output_directory/: conditioning_on_all.jsonl  holdout_Text_Anxiety.jsonl  holdout_Text_Numeracy.jsonl  holdout_Text_SubjectiveLit.jsonl  holdout_Text_TrustPhys.jsonl  labels.csv
results/: bert_sim_results_gpt.csv  experiment_results.csv
(+136 files in other folders)
