[tool.poetry]
name = "psych-agent-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "psych_agent_llm"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.2.5"
torch = "^2.5.0"
transformers = "^4.45.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
replicate = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
